[package]
name = "six"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
log = "0.4"
simple_logger = "1.11.0" # 确认simple_logger的版本是最新的或适合你的项目
chrono = { version = "0.4", features = ["serde"] }